the first update
- color scheme
- simplify
- text-indent for Chinese reading

--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -11,6 +11,9 @@
   target="_blank" style="color: #999999;">Twitter</a></div>
   {% endif %}
   <div class="post">
+    <style type="text/css">
+      p{text-indent:2em;}
+    </style>
     {{ content }}
   </div>
   {% if site.extAdsense -%}
